update tx signature with quantum

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -7,6 +7,8 @@ version = "2.0.2"
 edition = "2018"
 
 [dependencies]
+hex = "0.4.3"
+rust-dilithium2 = { path = "../../../cfx-account/cfx_account/quantum_sign/rust-dilithium2/" }
 bit-set = "0.4"
 substrate-bn = { git = "https://github.com/paritytech/bn", default-features = false, rev="63f8c587356a67b33c7396af98e065b66fca5dda" }
 byteorder = "1.0"
