--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 
 [dependencies]
 hex = "0.4.3"
-rust-dilithium2 = { path = "../../../cfx-account/cfx_account/quantum_sign/rust-dilithium2/" }
+rust-dilithium2 = { git = "https://github.com/shijingNWPU/rust-dilithium2.git", branch = "perf-test" }
+# rust-dilithium2 = { path = "../../../cfx-account/cfx_account/quantum_sign/rust-dilithium2/" }
 bit-set = "0.4"
 substrate-bn = { git = "https://github.com/paritytech/bn", default-features = false, rev="63f8c587356a67b33c7396af98e065b66fca5dda" }
 byteorder = "1.0"
