--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "tests/extra-test-toolkits"]
 	path = tests/extra-test-toolkits
 	url = https://github.com/shijingNWPU/conflux-rust-test-toolkits.git
+	branch = perf-test
 [submodule "tests/test_contracts"]
 	path = tests/test_contracts
 	url = https://github.com/Conflux-Chain/conflux-rust-dev-contracts.git
