Support postquantum in precompiled contract

--- a/core/executor/Cargo.toml
+++ b/core/executor/Cargo.toml
@@ -48,6 +48,8 @@ pow-types = {path = "../src/pos/types/pow-types"}
 impl-trait-for-tuples = "^0.2"
 impl-tools = "^0.10"
 typemap = "0.3"
+rust-dilithium2 = { git = "https://github.com/shijingNWPU/rust-dilithium2.git", branch = "perf-test" }
+
 
 [dev-dependencies]
 cfx-statedb = { path = "../statedb", features = ["testonly_code"]}
